<resources>
  <string name="app_name">SensorApp</string>

  <!-- Strings related to login -->
  <string name="prompt_phone">10 digit mobile number</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_phone">*This phone number is invalid</string>
  <string name="error_invalid_name">This name is too short</string>
  <string name="error_invalid_password">Password should be 4–12 letters</string>
  <string name="error_incorrect_name">This name is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing phone completions."</string>
  <string name="prompt_your_name">First &amp; Last Name</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="hint_search">Search</string>
  <string name="device_info">
    \sDevice: %1$s\n
    Manufacturer: %2$s\n
    Model: %3$s\n
    System Version: %4$s\n
    System Version Name: %5$s\n
    User Name: %6$s\n
    Mail ID: %7$s
  </string>
  <string name="device_info_minimal">
    User Name: %1$s\nPhone: %2$s
  </string>
  <string name="zero_search_result">Sorry!!! didn\'t find any device. Try some other keyword</string>
  <string name="action_register"><u>Register</u></string>
  <string name="hint_logout">Logout</string>
  <string name="hint_sync">Sync</string>
</resources>
