<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blackbeard.sensors.LoginActivity"
    >

  <!-- Login progress -->
  <ProgressBar
      android:id="@+id/login_progress"
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:visibility="gone"
      />

  <ScrollView
      android:id="@+id/login_form"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <AutoCompleteTextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="10"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/name_text_input_lay"
          android:visibility="gone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_your_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            />

      </android.support.design.widget.TextInputLayout>

      <Button
          android:id="@+id/sign_in_button"
          style="?android:textAppearanceSmall"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/action_sign_in"
          android:textStyle="bold"
          />
      <android.support.v7.widget.AppCompatTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="?android:textAppearanceMedium"
          android:text="@string/action_register"
          android:textColor="#F44336"
          android:layout_marginTop="@dimen/margin_small"
          android:gravity="center_horizontal"
          android:id="@+id/register"
          />
    </LinearLayout>
  </ScrollView>
</LinearLayout>
